Cherry-picked fix for title wrap problem from layout_improvement * cherry-picked from 92d1f4b

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ blockquote{border-left:0.4em solid #e3e8e8; margin-left:0; padding-left:1em}
 #main .article{border-bottom:0.3em dotted #e3e8e8; padding-bottom:0.5em;  margin-top:1em; text-align:justify}
 #main .last{border:0}
 #main .article h2{font-size:1.4em; margin:0; color:#F80}
-#main .article h2 a{font-size:0.8em; text-decoration:none; color:#272828; font-weight:normal}
+#main .article h2 a{font-size:0.8em; text-decoration:none; color:#272828; font-weight:normal; display:inline-block; vertical-align:middle; max-width:96%}
 #main .article h2 a:hover{text-decoration:underline}
 #main .article h3{font-size:1.05em; font-weight:normal; margin-bottom:0.5em; border-bottom:0.1em solid #e3e8e8}
 #main .article p{margin-bottom:0.7em}
